objects/DesignExecutionPermission__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Create_DE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create DE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_DT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create DT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EditIDRActualDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EditIDRActualDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_DE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit DE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_DE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export DE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_MileStone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export MileStone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promote_DE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promote DE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promote_SignOff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promote SignOff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promote_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promote Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIT_A_B_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RIT A/B Split</label>
        <type>Checkbox</type>
    </fields>
    <label>DesignExecutionPermission</label>
</CustomObject>